# euil

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
euil/: __init__.py  core.py  main.py
euil.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/example app 1/: example.euil  example.py
examples/feature demo/: feature_demo.py
examples/simple app/: simple_app.py
tests/: test_euil.py
